# travellings-link-travellings-rss-collection-page

./: CONTRIBUTING.md  LICENSE  README.md  config.toml  feed_urls.json  pyproject.toml  requirements-dev.txt  requirements.txt
src/: config.py  feed_storage.py  main.py  utils.py
src/static/css/: style.css
src/templates/: index.html
