[project]
name = "travellings-rss-collection-page"
version = "1.0.0"
requires-python = ">= 3.12"
description = "Travellings Project RSS Collection Page"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["rss"]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
src_paths = ["src"]
multi_line_output = 3
verbose = true
line_length = 90

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
packages = ["src"]
check_untyped_defs = true
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["feedparser", "apscheduler.schedulers.background"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -v -s"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
